crates/aura-core/tests/boundaries/opaque_operation_handle_private_constructor.rs
use aura_core::OpaqueOperationHandle;

struct Invite;

fn main() {
    let _ = OpaqueOperationHandle::<Invite, _, _>::new("invitation_create", 7u64);
}
